; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_trigger.c_GetCurrentFDWTuplestore.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_trigger.c_GetCurrentFDWTuplestore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32* }

@afterTriggers = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@CurTransactionContext = common dso_local global i32 0, align 4
@CurrentResourceOwner = common dso_local global i32 0, align 4
@CurTransactionResourceOwner = common dso_local global i32 0, align 4
@work_mem = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @GetCurrentFDWTuplestore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @GetCurrentFDWTuplestore() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @afterTriggers, i32 0, i32 1), align 8
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @afterTriggers, i32 0, i32 0), align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i64 %5
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  store i32* %8, i32** %1, align 8
  %9 = load i32*, i32** %1, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %11, label %26

11:                                               ; preds = %0
  %12 = load i32, i32* @CurTransactionContext, align 4
  %13 = call i32 @MemoryContextSwitchTo(i32 %12)
  store i32 %13, i32* %2, align 4
  %14 = load i32, i32* @CurrentResourceOwner, align 4
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* @CurTransactionResourceOwner, align 4
  store i32 %15, i32* @CurrentResourceOwner, align 4
  %16 = load i32, i32* @work_mem, align 4
  %17 = call i32* @tuplestore_begin_heap(i32 0, i32 0, i32 %16)
  store i32* %17, i32** %1, align 8
  %18 = load i32, i32* %3, align 4
  store i32 %18, i32* @CurrentResourceOwner, align 4
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @MemoryContextSwitchTo(i32 %19)
  %21 = load i32*, i32** %1, align 8
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @afterTriggers, i32 0, i32 1), align 8
  %23 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @afterTriggers, i32 0, i32 0), align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i64 %23
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  store i32* %21, i32** %25, align 8
  br label %26

26:                                               ; preds = %11, %0
  %27 = load i32*, i32** %1, align 8
  ret i32* %27
}

declare dso_local i32 @MemoryContextSwitchTo(i32) #1

declare dso_local i32* @tuplestore_begin_heap(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
